--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,27 +1,39 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+
+body {
+  background-color: #645a5a;
 }
 
-.example code {
-  font-family: monospace;
+.timer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.value {
+  font-size: 60px;
+  padding: 20px;
+  background-color: hsl(0, 4%, 26%);
+  color: #e9d7d7;
+  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  line-height: 1;
+}
+
+.label {
   font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
+  text-align: center;
+  color: #cab8b8;
 }
