--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #645a5a;
+  background-color: #5e5e5e;
 }
 
 .timer {
@@ -24,8 +24,8 @@ body {
 .value {
   font-size: 60px;
   padding: 20px;
-  background-color: hsl(0, 4%, 26%);
-  color: #e9d7d7;
+  background-color: hsl(0, 3%, 6%);
+  color: #f7f3f3;
   text-align: center;
   border-radius: 10px;
   margin-bottom: 20px;
@@ -35,5 +35,5 @@ body {
 .label {
   font-size: 16px;
   text-align: center;
-  color: #cab8b8;
+  color: #e7e0e0;
 }
